fix: tab flicker on page reload

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,21 +1,21 @@
 <div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="accountTab" class="max-w-3xl mx-auto px-4 my-16">
   <div class="tab-container">
-    <button type="button" id="accountTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab">
+    <button type="button" id="accountTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'accountTab' ? 'btn-tab-active' : '' %>">
       <%= inline_svg_tag 'icons/profile.svg', class: 'size-5' %>
       <span>Account</span>
     </button>
 
-    <button type="button" id="settingsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab">
+    <button type="button" id="settingsTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab] == 'settingsTab' ? 'btn-tab-active' : '' %>">
       <%= inline_svg_tag 'icons/settings.svg', class: 'size-5' %>
       <span>Settings</span>
     </button>
   </div>
 
-  <div id="accountTab" data-tabs-target="tab">
+  <div id="accountTab" data-tabs-target="tab" class="mb-24 <%= params[:tab].blank? || params[:tab] == 'accountTab' ? '' : 'hidden' %>">
     <%= render 'edit_user' %>
   </div>
 
-  <div id="settingsTab" data-tabs-target="tab" class="hidden">
+  <div id="settingsTab" data-tabs-target="tab" class="mb-24 <%= params[:tab] == 'settingsTab' ? '' : 'hidden' %>">
     <%= render 'users/edit_settings' %>
   </div>
 </div>
