fix: broken tab bar on edit team page

--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,5 +1,5 @@
-<div data-controller="tabs" data-tabs-active-class="mb-24 btn-tab-active" data-tabs-default-tab-value="editTab" class="mb-24 max-w-3xl mx-auto px-4 my-16">
-  <div class="mb-24 tab-container">
+<div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="editTab" class="mb-24 max-w-3xl mx-auto px-4 my-16">
+  <div class="tab-container">
     <button type="button" id="editTab" data-tabs-target="btn" data-action="click->tabs#select" class="btn-tab <%= params[:tab].blank? || params[:tab] == 'editTab' ? 'btn-tab-active' : '' %>">
       <%= inline_svg_tag 'icons/team.svg', class: 'size-5' %>
       <span>Team</span>
