--- a/app/views/teams/_rankings.html.erb
+++ b/app/views/teams/_rankings.html.erb
@@ -39,7 +39,7 @@
     <tbody class="divide-y divide-slate-200 dark:divide-slate-700">
       <% @team.members.sort_by { |member| -member.miles_this_season(@team) }.each do |member| %>
         <tr class="bg-slate-50/85 dark:bg-slate-800/85 hover:bg-slate-200/70 dark:hover:bg-slate-700/70">
-          <th scope="row" class="px-6 py-4 font-medium text-slate-800 dark:text-slate-100">
+          <th scope="row" class="px-6 py-4 font-medium text-slate-800 dark:text-slate-100 whitespace-nowrap">
             <div class="flex items-center">
               <div class="row-number mr-4 -ml-1"></div>
               <div>
