--- a/app/views/teams/_rankings.html.erb
+++ b/app/views/teams/_rankings.html.erb
@@ -55,7 +55,7 @@
         <tr class="bg-slate-50/85 dark:bg-slate-800/85 hover:bg-slate-200/70 dark:hover:bg-slate-700/70">
           <th scope="row" class="px-6 py-4 font-medium text-slate-800 dark:text-slate-100 whitespace-nowrap">
             <div class="flex items-center">
-              <div class="row-number mr-4 -ml-1"></div>
+              <div class="row-number font-mono mr-4 -ml-1"></div>
               <div>
                 <%= content_tag(:p, member == current_user ? 'You' : 'Coach', class: 'help-text') if member.owns?(@team) || member == current_user %>
                 <%= link_to member.default_name, member, data: { turbo: false }, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %>
@@ -68,17 +68,17 @@
             </td>
           <% end %>
           <% if @team.season_dates? %>
-            <td class="px-6 py-4">
+            <td class="px-6 py-4 font-mono">
               <%= member.miles_this_season(@team) %>
             </td>
-            <td class="px-6 py-4">
+            <td class="px-6 py-4 font-mono">
               <%= member.total_long_runs_this_season(@team) %>
             </td>
           <% end %>
-          <td class="px-6 py-4">
+          <td class="px-6 py-4 font-mono">
             <%= member.total_miles %>
           </td>
-          <td class="px-6 py-4">
+          <td class="px-6 py-4 font-mono">
             <%= member.total_long_runs(@team) %>
           </td>
         </tr>
@@ -90,11 +90,11 @@
         <th scope="row" class="px-6 py-3">Total</th>
         <td class="px-6 py-3"></td>
         <% if @team.season_dates? %>
-          <td class="px-6 py-3"><%= @team.total_miles_in_season %> <span class="text-xs">mi</span></td>
-          <td class="px-6 py-3"><%= @team.total_long_runs_in_season %> <span class="text-xs">long runs</span></td>
+          <td class="px-6 py-3 font-mono"><%= @team.total_miles_in_season %> <span class="text-xs">mi</span></td>
+          <td class="px-6 py-3 font-mono"><%= @team.total_long_runs_in_season %> <span class="text-xs">long runs</span></td>
         <% end %>
-        <td class="px-6 py-3"><%= @team.total_miles %> <span class="text-xs">mi</span></td>
-        <td class="px-6 py-3"><%= @team.total_long_runs %> <span class="text-xs">long runs</span></td>
+        <td class="px-6 py-3 font-mono"><%= @team.total_miles %> <span class="text-xs">mi</span></td>
+        <td class="px-6 py-3 font-mono"><%= @team.total_long_runs %> <span class="text-xs">long runs</span></td>
       </tr>
     </tfoot>
   </table>
