fix: typo in contact information description

--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -24,7 +24,7 @@
   <div class="mb-24">
     <div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
       <h1 class="heading">Contact Information</h1>
-      <p class="text-slate-700 dark:text-slate-400"><%= user == current_user ? 'Your contact information' : 'Conact information for this user' %>.</p>
+      <p class="text-slate-700 dark:text-slate-400"><%= user == current_user ? 'Your contact information' : 'Contact information for this user' %>.</p>
     </div>
 
     <div class="block sm:flex space-y-4 sm:items-center sm:justify-around mb-8">
