change 'contact information' header to just 'contact'

--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -23,7 +23,7 @@
 <% if user.show_email? || (user.phone_number? && user.show_phone?) %>
   <div class="mb-24">
     <div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
-      <h1 class="heading">Contact Information</h1>
+      <h1 class="heading">Contact</h1>
       <p class="text-slate-700 dark:text-slate-400"><%= user == current_user ? 'Your contact information' : 'Contact information for this user' %>.</p>
     </div>
 
