--- a/app/views/teams/_join_request.html.erb
+++ b/app/views/teams/_join_request.html.erb
@@ -3,8 +3,8 @@
     <%= image_tag request.user.avatar, class: 'size-12 rounded-lg drop-shadow-lg dark:drop-shadow-none' if request.user.avatar.attached? %>
 
     <div>
-      <p class="group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300"><%= request.user.default_name %></p>
-        <%= content_tag(:p, request.user.username, class: 'help-text') if request.user.display_name.present? %>
+      <p class="font-semibold group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300"><%= request.user.default_name %></p>
+      <%= content_tag(:p, request.user.username, class: 'help-text') if request.user.display_name.present? %>
     </div>
   <% end %>
 
